2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Added functions add_user(), remove_user(), and
	purge_members() to ease the support of gshadow.

2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/expiry.c: Use Basename for Prog.
	* src/expiry.c: Added missing OPENLOG.

2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/nscd.c: Make sure the file is not empty when configured
	without nscd support.

2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Remove the USE_NSCD AM_CONDITIONAL (USE_NSCD is
	not used in any Makefile.am).
	* configure.in: Make sure posix_spawn is present when configured
	with nscd support.

2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupmem.c, lib/pwmem.c, lib/shadowmem.c: Added brackets and
	parenthesis.
	* lib/groupmem.c, lib/pwmem.c, lib/shadowmem.c: Avoid assignments
	in comparisons.

2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/mail.c: Added brackets and parenthesis.
	* libmisc/mail.c: Avoid assignments in comparisons.

2008-08-26  Tobias  <tp@fonz.de>

	* NEWS: Added support for uclibc.
	* configure.in, libmisc/copydir.c: futimes() and lutimes() are not
	standard. Check if they are implemented before using them. Do not
	set the time of links if lutimes() does not exist, and use
	utimes() as a replacement for futimes().
	* configure.in, lib/nscd.h, lib/nscd.c: Added --with-nscd and
	--without-nscd flags to support systems without nscd.
	* lib/groupio.h, lib/prototypes.h, lib/pwio.h, lib/sgetgrent.c:
	Include <sys/types.h> before <pwd.h> and <grp.h>. It is necessary
	for the definition of uid_t and gid_t.
	* lib/pwmem.c: do not include <pwd.h>, "pwio.h" is sufficient
	here.
	* configure.in: Check if the stat structure has a st_atim or
	st_atimensec field.
	* libmisc/copydir.c: Conditionally use the stat's st_atim and
	st_atimensec fields.
