@@ -1,7 +1,10 @@
 2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>
 
-	* src/groupmems.c: Added functions add_user(), remove_user(), and
-	purge_members() to ease the support of gshadow.
+	* src/groupmems.c: Added functions add_user(), remove_user(),
+	purge_members(), open_files, and close_files to ease the support
+	of gshadow.
+	* src/groupmems.c: Always call check_perms(). This function now
+	succeed when the requested action is to list the members.
 
 2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>
 
